--- a/events.html
+++ b/events.html
@@ -21,6 +21,7 @@
       <a href="index.html" class="brand-logo left"><img src="img/mdc.svg" />K-State MDC</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="officers.html">Officers</a></li>
         <li class="active"><a href="events.html">Events</a></li>
         <li><a href="https://orgsync.com/97582/chapter" target="_blank">OrgSync</a></li>
@@ -28,6 +29,7 @@
       </ul>
       <ul id="nav-mobile" class="side-nav">
         <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="officers.html">Officers</a></li>
         <li class="active"><a href="events.html">Events</a></li>
         <li><a href="https://orgsync.com/97582/chapter" target="_blank">OrgSync</a></li>
