Change logo to png

--- a/officers.html
+++ b/officers.html
@@ -18,7 +18,7 @@
     <div class="navbar-fixed">
         <nav role="navigation">
             <div class="nav-wrapper container">
-                <a href="index.html" class="brand-logo left"><img src="img/mdc.svg" />K-State MDC</a>
+                <a href="index.html" class="brand-logo left"><img src="img/mdc.png" />K-State MDC</a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
