--- a/leaderboard.html
+++ b/leaderboard.html
@@ -128,7 +128,7 @@ tr:nth-child(odd) {
   function addRows(players){
     var tableRef = document.getElementById('Leaderboard').getElementsByTagName('tbody')[0];
     var total = 0;
-    for (var i = 0; i < players.length; i++){
+    for (var i = 0; i < 10; i++){
       var newRow = tableRef.insertRow(tableRef.rows.length);
       var newCell0 = newRow.insertCell(0);
       var newCell1 = newRow.insertCell(1);
