levels not clicks

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -88,7 +88,7 @@ tr:nth-child(odd) {
 </table>
 </body>
 <img src="images/monkey.png" alt="Monkey" width="300" height="300">
-<p id="TotalClicks">Total Clicks: </p>
+<p id="TotalClicks">Total Levels Achieved: </p>
 <p>K-State MDC 2019</p>
 
 <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
