--- a/leaderboard.html
+++ b/leaderboard.html
@@ -141,7 +141,7 @@ tr:nth-child(odd) {
       newCell1.appendChild(newText1);
       newCell2.appendChild(newText2);
     }
-    var scoreRef = document.getElementById("TotalClicks").textContent = "Total clicks: " + total;
+    var scoreRef = document.getElementById("TotalClicks").textContent = "Levels achieved: " + total;
   }
 
   // Event handler for Firebase snapshots.
